# app/swagger/weatherApi.json
@@ -1,7 +1,7 @@
 {
-  "openapi": "3.0.4",
+  "openapi": "3.0.0",
   "info": {
-    "title": "Weather UI- OpenAPI 3.0",
+    "title": "Weather API - OpenAPI 3.0",
     "description": "Stores and provides weather data",
     "version": "1.0.0"
   },
@@ -142,8 +142,7 @@
             "example": 20.0
           },
           "humidity": {
-            "type": "number",
-            "example": 50
+            "$ref": "#/components/schemas/Humidity"
           },
           "lat": {
             "$ref": "#/components/schemas/Latitude"
@@ -170,6 +169,12 @@
         "format": "double",
         "minimum": -180,
         "maximum": 180
+      },
+      "Humidity": {
+        "type": "number",
+        "format": "double",
+        "minimum": 0,
+        "maximum": 100
       },
       "CitiesResponse": {
         "type": "object",
